# Zisc

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.md  LICENSE.txt  README.md
document/: CMakeLists.txt  acknowledgement.md
example/: CMakeLists.txt  algorithm_example.cpp  aligned_memory_pool_example.cpp  compensated_summation_example.cpp  concurrent_bounded_queue_example.cpp  config.cmake  correlated_multi_jittered_engine_example.cpp  csv_example.cpp  cumulative_distribution_function_example.cpp  error_example.cpp  linear_algebra_example.cpp  lock_free_bounded_queue_example.cpp  pseudo_random_number_engine_example.cpp  stopwatch_example.cpp  string_example.cpp  thread_manager_example.cpp  thread_pool_example.cpp  unit_example.cpp
source/zisc/: CMakeLists.txt  config.cmake  document.dox
source/zisc/clang-tidy/: clang-tidy.cpp
source/zisc/cmake/: compiler.cmake  compiler_internal.cmake  document.cmake  general.cmake  googletest.cmake  packaging.cmake  packaging_internal.cmake  platform.cmake
source/zisc/zisc/: algorithm-inl.hpp  algorithm.cpp  algorithm.hpp  aligned_memory_pool-inl.hpp  aligned_memory_pool.hpp  arith_array-inl.hpp  arith_array.hpp  arithmetic_array-inl.hpp  arithmetic_array.hpp  array-inl.hpp  array.hpp  atomic-inl.hpp  atomic.cpp  atomic.hpp  binary_data-inl.hpp  binary_data.hpp  binary_serializer-inl.hpp  bit-inl.hpp  bit.hpp  bit_cast_gcc-inl.hpp  bit_cast_gcc.hpp  bitset-inl.hpp  bitset.hpp  compensated_summation-inl.hpp  compensated_summation.hpp  concepts-inl.hpp  concepts.hpp  const_math-inl.hpp  const_math.hpp  correlated_multi_jittered_engine-inl.hpp  correlated_multi_jittered_engine.hpp  csv-inl.hpp  csv.hpp  cumulative_distribution_function-inl.hpp  cumulative_distribution_function.hpp  dimension-inl.hpp  dimension.hpp  dsfmt_engine-inl.hpp  dsfmt_engine.hpp  error-inl.hpp  (+108 more)
test/: CMakeLists.txt  config.cmake
test/gtest/: config.cmake
test/math_reference/: CMakeLists.txt  basic_test.cpp  basic_test.hpp  error_function_test.cpp  error_function_test.hpp  exponential_test.cpp  exponential_test.hpp  float_manipulation_test.cpp  float_manipulation_test.hpp  half_arithmetic_test.cpp  main.cpp  math_acos_subd_reference.txt.tar.xz  math_acos_subf_reference.txt.tar.xz  math_acosd_reference.txt.tar.xz  math_acosf_reference.txt.tar.xz  math_acosh_subd_reference.txt.tar.xz  math_acosh_subf_reference.txt.tar.xz  math_acoshd_reference.txt.tar.xz  math_acoshf_reference.txt.tar.xz  math_asin_subd_reference.txt.tar.xz  math_asin_subf_reference.txt.tar.xz  math_asind_reference.txt.tar.xz  math_asinf_reference.txt.tar.xz  math_asinh_subd_reference.txt.tar.xz  math_asinh_subf_reference.txt.tar.xz  math_asinhd_reference.txt.tar.xz  math_asinhf_reference.txt.tar.xz  math_atan2d_reference.txt.tar.xz  math_atan2f_reference.txt.tar.xz  math_atan_subd_reference.txt.tar.xz  math_atan_subf_reference.txt.tar.xz  math_atand_reference.txt.tar.xz  math_atanf_reference.txt.tar.xz  math_atanh_subd_reference.txt.tar.xz  math_atanh_subf_reference.txt.tar.xz  math_atanhd_reference.txt.tar.xz  math_atanhf_reference.txt.tar.xz  math_cbrt_subd_reference.txt.tar.xz  math_cbrt_subf_reference.txt.tar.xz  math_cbrtd_reference.txt.tar.xz  (+131 more)
test/math_reference/reference/: half_arithmetic_reference.bin.7z  math_acos_subd_reference.bin.7z  math_acos_subf_reference.bin.7z  math_acosd_reference.bin.7z  math_cosd_reference.bin.7z  (+162 more)
test/resources/: cmj_n64_reference  cmj_n81_reference.txt  dsfmt_11213_reference  dsfmt_1279_reference  dsfmt_132049_reference  dsfmt_19937_reference  dsfmt_216091_reference  dsfmt_2203_reference  dsfmt_4253_reference  dsfmt_44497_reference  dsfmt_521_reference  dsfmt_86243_reference  half_float_negative_reference.txt  half_float_reference.txt  half_float_subnormal_reference.txt  pcg_lcg_rxs_m_xs_16_reference  pcg_lcg_rxs_m_xs_32_reference.txt  pcg_lcg_rxs_m_xs_64_reference  pcg_lcg_rxs_m_xs_8_reference  pcg_lcg_rxs_m_xs_reference  pcg_lcg_xsh_rr_16_reference  pcg_lcg_xsh_rr_32_reference  pcg_lcg_xsh_rr_8_reference  pcg_lcg_xsh_rr_reference  pcg_lcg_xsh_rs_16_reference  pcg_lcg_xsh_rs_32_reference  pcg_lcg_xsh_rs_8_reference  pcg_lcg_xsh_rs_reference  pcg_mcg_rxs_m_xs_reference  pcg_mcg_xsh_rr_16_reference  pcg_mcg_xsh_rr_32_reference  pcg_mcg_xsh_rr_8_reference  pcg_mcg_xsh_rr_reference  pcg_mcg_xsh_rs_16_reference  pcg_mcg_xsh_rs_32_reference  pcg_mcg_xsh_rs_8_reference  pcg_mcg_xsh_rs_reference  sip_hash_32_reference  sip_hash_64_reference  xoshiro128_2plus_reference.txt  (+6 more)
test/unit_test/: algorithm_test.cpp  aligned_memory_pool_test.cpp  arithmetic_array_test.cpp  array_test.cpp  binary_data_test.cpp  compensated_summation_test.cpp  const_math_test.cpp  csv_test.cpp  cumulative_distribution_function_test.cpp  dsfmt_engine_test.cpp  error_test.cpp  floating_point_test.cpp  fraction_test.cpp  linear_interp_test.cpp  math_test.cpp  matrix_test.cpp  pcg_engine_test.cpp  string_test.cpp  test.cpp  thread_pool_test.cpp  type_traits_test.cpp  utility_test.cpp  xoroshiro128_plus_engine_test.cpp  xsadd_engine_test.cpp
test/unittest/: algorithm_test.cpp  alloc_free_resource_test.cpp  arith_array_test.cpp  array_test.cpp  atomic_test.cpp  atomic_wait_test.cpp  binary_data_test.cpp  binary_serializer_test.cpp  bit_test.cpp  bitset_test.cpp  boolean_test.cpp  compensated_summation_test.cpp  concepts_test.cpp  concurrent_map_test-inl.hpp  concurrent_map_test.cpp  concurrent_map_test.hpp  concurrent_queue_test-inl.hpp  concurrent_queue_test.cpp  concurrent_queue_test.hpp  concurrent_search_tree_test-inl.hpp  concurrent_search_tree_test.cpp  concurrent_search_tree_test.hpp  config_test.cpp  const_math_test.cpp  correlated_multi_jittered_engine_test.cpp  csv_test.cpp  cumulative_distribution_function_test.cpp  error_test.cpp  fixed_array_resource_test.cpp  floating_point_bit_double_test.cpp  floating_point_bit_test.cpp  floating_point_test.cpp  fnv_1a_hash_engine_test.cpp  fraction_test.cpp  function_reference_test.cpp  googletest.hpp  help_optimal_bst_test.cpp  ieee_754_binary_binary16_test.cpp  ieee_754_binary_binary32_test.cpp  ieee_754_binary_binary64_test.cpp  (+57 more)
(+252 files in other folders)
